# Qt-KuGouAppClient

./: .clang-format  .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
KuGouClient/: CMakeLists.txt  KuGouClient.cpp  KuGouClient.h  KuGouClient.ui  kugou.css
KuGouClient/AiChat/: AiChat.cpp  AiChat.h  AiChat.ui  CMakeLists.txt  Chat.h  ChatView.cpp  ChatView.h  chat.css
KuGouClient/AllMusic/: AllMusic.cpp  AllMusic.h  AllMusic.ui  CMakeLists.txt  all.css
KuGouClient/Channel/: CMakeLists.txt  Channel.cpp  Channel.h  Channel.ui  ChannelBlock.cpp  ChannelBlock.h  PartWidget.h  channel.css  desc.json  title.json
KuGouClient/DailyRecommend/: CMakeLists.txt  DailyRecommend.cpp  DailyRecommend.h  DailyRecommend.ui  daily.css
KuGouClient/ListenBook/: CMakeLists.txt  ListenBook.cpp  ListenBook.h  ListenBook.ui  listen.css
KuGouClient/Live/: CMakeLists.txt  Live.cpp  Live.h  Live.ui  live.css
KuGouClient/LocalDownload/: CMakeLists.txt  LocalDownload.cpp  LocalDownload.h  LocalDownload.ui  local.css
KuGouClient/MusicCloudDisk/: CMakeLists.txt  MusicCloudDisk.cpp  MusicCloudDisk.h  MusicCloudDisk.ui  cloud.css
KuGouClient/MusicRepository/: CMakeLists.txt  MusicRepoBlock.cpp  MusicRepoBlock.h  MusicRepoList.cpp  MusicRepoList.ui  MusicRepoVideo.cpp  MusicRepoVideo.h  MusicRepository.cpp  MusicRepository.h  MusicRepository.ui  musicrepo.css  musicrepo.json  repolist.css
KuGouClient/MyCollection/: CMakeLists.txt  MyCollection.cpp  MyCollection.h  collection.css
KuGouClient/PurchasedMusic/: CMakeLists.txt  PurchasedMusic.cpp  PurchasedMusic.h  PurchasedMusic.ui  purchased.css
KuGouClient/RecentlyPlayed/: CMakeLists.txt  RecentlyPlayed.cpp  RecentlyPlayed.h  RecentlyPlayed.ui  recently.css
KuGouClient/RecommendForYou/: CMakeLists.txt  RecommendForYou.cpp  RecommendForYou.h  RecommendForYou.ui  recommend.css
KuGouClient/Res_Qrc/: Res.qrc
KuGouClient/Search/: CMakeLists.txt  Search.cpp  Search.h  Search.ui  search.css
KuGouClient/SearchResultWidget/: CMakeLists.txt  SearchResultWidget.cpp  SearchResultWidget.h  result.css
KuGouClient/SongList/: CMakeLists.txt  SongBlock.cpp  SongBlock.h  SongList.cpp  SongList.h  SongList.ui  list.css
KuGouClient/Video/: CMakeLists.txt  Video.cpp  Video.h  Video.ui  video.css
KuGouServer/: CMakeLists.txt  KuGouServer.cpp  KuGouServer.h  Server.cpp  Server.h  main.cpp
KuGouServer/NetWork/: ccanbus.cpp  ccanbus.h  cchatserver.cpp  cchatserver.h  cequipmentmanagerserver.cpp  cequipmentmanagerserver.h  chttpserver.cpp  chttpserver.h  cmodbusclient.cpp  cmodbusclient.h  cmodbusserver.cpp  cmodbusserver.h  cserialportmanager.cpp  cserialportmanager.h  csvnversionclient.cpp  csvnversionclient.h  csvnversionserver.cpp  csvnversionserver.h  ctcpsocketclient.cpp  ctcpsocketclient.h  ctcpsocketserver.cpp  ctcpsocketserver.h  cudpsocket.cpp  cudpsocket.h  cwebsocketclient.cpp  cwebsocketclient.h  cwebsocketserver.cpp  cwebsocketserver.h  httplib.h  libhttp.cpp  libhttp.h  networkframemanager.cpp  networkframemanager.h  qenet.cpp  qenet.h  subandpubclient.cpp  subandpubclient.h  subandpubserver.cpp  subandpubserver.h
KuGouStart/: CMakeLists.txt  KuGouApp.cpp  KuGouApp.h  KuGouApp.ui  Res.qrc  kugou.css  main.cpp
KuGouStart/AiChat/: AiChat.cpp  AiChat.h  AiChat.ui  CMakeLists.txt  Chat.cpp  Chat.h  ChatView.cpp  ChatView.h  chat.css
KuGouStart/AllMusic/: AllMusic.cpp  AllMusic.h  AllMusic.ui  CMakeLists.txt  all.css
KuGouStart/Channel/: CMakeLists.txt  Channel.cpp  Channel.h  Channel.ui  ChannelBlock.cpp  ChannelBlock.h  ChannelBlock.ui  PartWidget.cpp  PartWidget.h  SScrollArea.cpp  SScrollArea.h  channel.css  channelblock.css  part.css
KuGouStart/DailyRecommend/: CMakeLists.txt  DailyRecommend.cpp  DailyRecommend.h  DailyRecommend.ui  daily.css
KuGouStart/DefaultList/: CMakeLists.txt  DefaultList.cpp  DefaultList.h  DefaultList.ui
KuGouStart/ListenBook/: CMakeLists.txt  ListenBook.cpp  ListenBook.h  ListenBook.ui  listen.css
KuGouStart/Live/: CMakeLists.txt  Live.cpp  Live.h  Live.ui  live.css  text.json
KuGouStart/LocalDownload/: CMakeLists.txt  LocalDownload.cpp  LocalDownload.h  LocalDownload.ui  local.css
KuGouStart/MusicCloudDisk/: CMakeLists.txt  MusicCloudDisk.cpp  MusicCloudDisk.h  MusicCloudDisk.ui  cloud.css
KuGouStart/MusicRepository/: CMakeLists.txt  MusicRepo.css  MusicRepoBlock.cpp  MusicRepoBlock.h  MusicRepoBlock.ui  MusicRepoList.cpp  MusicRepoList.h  MusicRepoList.ui  MusicRepoVideo.cpp  MusicRepoVideo.h  MusicRepoVideo.ui  MusicRepository.cpp  MusicRepository.h  MusicRepository.ui  repoblock.css  repolist.css  repovideo.css
KuGouStart/MyCollection/: CMakeLists.txt  MyCollection.cpp  MyCollection.h  MyCollection.ui  collection.css
KuGouStart/PurchasedMusic/: CMakeLists.txt  PurchasedMusic.cpp  PurchasedMusic.h  PurchasedMusic.ui  purchased.css
KuGouStart/RecentlyPlayed/: CMakeLists.txt  RecentlyPlayed.cpp  RecentlyPlayed.h  RecentlyPlayed.ui  recently.css
KuGouStart/RecommendForYou/: CMakeLists.txt  RecommendForYou.cpp  RecommendForYou.h  RecommendForYou.ui  recommend.css
KuGouStart/Res/: titleIcon.rc
KuGouStart/Res&Qrc/: ListenBook.qrc  Live.qrc  Res.qrc  StandCover.qrc
KuGouStart/Res_Qrc/: Res.qrc
KuGouStart/Search/: CMakeLists.txt  Search.cpp  Search.h  Search.ui  search.css
KuGouStart/SongList/: CMakeLists.txt  SongBlock.cpp  SongBlock.h  SongList.cpp  SongList.h  SongList.ui  descs.json  list.css
KuGouStart/Video/: CMakeLists.txt  Video.cpp  Video.h  Video.ui  video.css
ui/: CMakeLists.txt
ui/DynamicBackground/: CMakeLists.txt  dynamicbackgroundgradient.cpp  dynamicbackgroundgradient.h  dynamicbackgroundinterface.h  dynamicbackgroundpure.h
ui/ElaWidget/: CMakeLists.txt
ui/ElaWidgetTools/: CMakeLists.txt
ui/IconBesideTextToolButton/: CMakeLists.txt  IconBesideTextToolButton.h
ui/InteractiveButtonBase/: CMakeLists.txt  InteractiveButtonBase.h  WaterZoomButton.h
ui/LoginInterface/: CMakeLists.txt  hollow_button.cpp  hollow_button.h  input_box.cpp  input_box.h  login_button.cpp  login_button.h  (+10 more)
util/: CMakeLists.txt
(+47398 files in other folders)
