cmake_minimum_required(VERSION 3.10)

project(KuGou-Server VERSION 1.0 LANGUAGES CXX)

# 全局默认设定：可执行文件和 DLL 到 bin/, 静态库和导入库（.dll.a）到 lib/
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED Core Sql SerialBus WebSockets)

file(GLOB KUGOU_SERVER_NET_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NetWork/*.cpp)
file(GLOB KUGOU_SERVER_NET_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/NetWork/*.h)

file(GLOB KUGOU_SERVER_KCP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NetWork/kcp/*.cpp)
file(GLOB KUGOU_SERVER_KCP_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/NetWork/kcp/*.h)

set(SOURCE_FILE
    main.cpp
    Server.h
    Server.cpp
    ${KUGOU_SERVER_NET_HEADERS}
    ${KUGOU_SERVER_NET_SOURCES}
    ${KUGOU_SERVER_KCP_SOURCES}
    ${KUGOU_SERVER_KCP_HEADERS}
)

add_executable(${PROJECT_NAME} ${SOURCE_FILE})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
        PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/NetWork)

target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Sql Qt6::SerialBus
        Qt6::WebSockets SJwt MyQsLog JQHttpServer MyDBPoll)